--- a/src/app/components/Progress.module.css
+++ b/src/app/components/Progress.module.css
@@ -1,8 +1,18 @@
 .container {
-
+  width: 100%;
+  height: 1.5em;
+  border: 1px solid green;
+  border-radius: .25em;
+  position: relative;
+  margin: 1em 0;
 }
 
 .progressbar {
-  width: 100%;
-  height: 10px;
+  background-color: gray;
+  width: 70%;
+  height: 100%;
+  border-radius: .15em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
