--- a/src/app/components/CommingSoon.module.css
+++ b/src/app/components/CommingSoon.module.css
@@ -1,16 +1,15 @@
 .container {
   width: min(100vw, 680px);
-  border: 1px solid red;
   padding: 1em;
 }
 
 .mainText {
-  font-size: 1.9em;
-  font-weight: 700;
+  font-size: 4em;
+  font-weight: 400;
   text-align: center;
+  color: #fff;
   padding: 1rem 0;
   margin: 1rem 0;
-  border-bottom: 1px solid #cecece;
 }
 
 .subText {
