--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,4 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url(../../public/bg.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
