--- a/src/app/components/Progress.module.css
+++ b/src/app/components/Progress.module.css
@@ -1,18 +1,30 @@
 .container {
-  width: 100%;
-  height: 1.5em;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   border-radius: .25em;
   position: relative;
   margin: 1em 0;
+  padding: .35em;
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 50px 100px -20px, rgba(255, 255, 255, 0.3) 0px 30px 60px -30px, rgba(255, 255, 255, 0.35) 0px -2px 6px 0px inset;
+  overflow-x: hidden;
 }
 
 .progressbar {
-  background-color: gray;
-  width: 70%;
-  height: 100%;
+  background-color: rgba(255, 255, 255, .4);
+  padding: .2em 0;
   border-radius: .15em;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  animation: anim 2s ease-out;
+}
+
+@keyframes anim {
+  0% {
+    left: -100%;
+  }
+
+  100% {
+    left: 0
+  }
 }
