--- a/src/app/components/Notify.module.css
+++ b/src/app/components/Notify.module.css
@@ -4,19 +4,34 @@
 
 .parent {
   display: flex;
-  border: 1px solid red;
-
 }
 
 .input {
-  padding: .4em;
+  padding: .5em 1em;
   flex: 1 1 80%;
   font-size: inherit;
   font-family: inherit;
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 50px 100px -20px, rgba(255, 255, 255, 0.3) 0px 30px 60px -30px, rgba(255, 255, 255, 0.35) 0px -2px 6px 0px inset;
+  border: 0;
+  outline: none;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.40) 0%, rgba(255, 255, 255, 0.10) 100%);
+  border-top-left-radius: .25em;
+  border-bottom-left-radius: .25em;
+  border: 1px solid rgba(148, 38, 186, .5);
+}
+
+.input::placeholder {
+  color: rgba(255, 255, 255, 0.6)
 }
 
 .btn {
-  padding: .4em;
+  padding: 1em;
+  background-color: #9426BA;
+  border: 0;
+  outline: none;
+  border: 1px solid rgba(148, 38, 186, .5);
+  border-top-right-radius: .25em;
+  border-bottom-right-radius: .25em;
 }
 
 .msg {
