--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: #ffffff;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
