--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -2,5 +2,6 @@
   background-image: url('/bg.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 10%;
+  /* background-position: 0 10%; */
+  background-position: center;
 }
